# rust_os

./: .gitignore  Cargo.toml  CoolTermCfg.stc  Gemfile  Makefile  README.md  chainloader_kernel8.img  kernel8.img
.cargo/: config.toml
.vendor/bundle/ruby/2.7.0/extensions/x86_64-darwin-18/2.7.0/serialport-1.3.1/: gem_make.out  serialport.bundle
.vendor/bundle/ruby/2.7.0/specifications/: serialport-1.3.1.gemspec
src/: console.rs  cpu.rs  driver.rs  exception.rs  main.rs  memory.rs  panic_wait.rs  print.rs  relocate.rs  runtime_init.rs  synchronization.rs  time.rs
src/arch/aarch64/: cpu.rs  exception.S  exception.rs  time.rs
src/arch/aarch64/cpu/: smp.rs
src/arch/aarch64/exception/: asynchronous.rs
src/arch/aarch64/memory/: mmu.rs
src/bsp/: README.md  raspberrypi.rs
src/bsp/device_driver/: common.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  cpu.rs  driver.rs  link.ld  memory.rs
src/bsp/raspberrypi/memory/: mmu.rs
src/cpu/: smp.rs
src/exception/: asynchronous.rs
src/memory/: mmu.rs
